# Ionized

./: CMakeLists.txt  patterns.py
data/: tokens.txt
include/: config.h  lexer.h  list.h  string_tools.h  token.h  token_impls.h
src/: config.c  ionc.c  lexer.c  list.c
tests/: test_lexer.c  test_list.c  test_utils.h
